--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@ Home Target computer
 {% block content %}
 <div class="hero1">
     <div class="article">
-       <h1>Become Master in computer<br>
-           and its Applications<br>
+       <h1>Become Master in computer
+           and its Applications
            Join us Now
        </h1>
        <p>
