--- a/templates/base.html
+++ b/templates/base.html
@@ -15,22 +15,21 @@
     </title>
 </head>
 <body>
-    <header id="header">
+    <header>
         <div class="logo">
-          <img src="{{url_for('static',filename='images/logo1.png')}}" alt="">
-        </div>
-        <div class="navbar">
+            <img src="{{url_for('static',filename='images/logo1.png')}}">
+        </div> 
+        <div class="nav">
             <ul>
                 <li id="home"><a href="">Home</a></li>
                 <li><a href="">Courses</a></li>
                 <li><a href="">Pricing</a></li>
                 <li><a href="">About</a></li>
             </ul>
-            <div class="bars">
-                <i class="fa fa-bars" aria-hidden="true" id="bars"></i>
-            </div>
-        </div>
+            <i class="fa fa-bars" aria-hidden="true" id="bars"></i>
+        </div>   
     </header>
+
     <div class="submenu">
       <div class="subshow">
         <div class="social">
@@ -84,8 +83,8 @@
                 <br>SACHIN SINGH please help him<br>
                 to motivate more <br>
                 
-            </p>
-            <div class="devdonate"><a href="">Donate Now</a></div>
+            </p><br>
+            <div class="devdonate"><a href="">Donate Now</a></div><br>
             <div class="devsocial">
                 <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
