--- a/static/home.css
+++ b/static/home.css
@@ -5,8 +5,8 @@
 .btns{display: flex;margin-left: -25px;}
 .btns div{padding: 20px;}
 .btns div a{background: red;text-decoration: none;color:white;padding: 10px;border-radius: 5px;}
-.hero2{display: flex;flex-direction: column;align-items: center;font-size: 180%;padding-top: 150px;}
-.hero2 p{text-align: center;}
+.hero2{display: flex;flex-direction: column;align-items: center;font-size: 150%;padding-top: 150px;}
+
 .hero2btn{display: flex;flex-direction: row;}
 .hero2btn div{padding:20px;}
 .hero2btn div a{text-decoration: none;color:white;background: red;padding: 10px;border-radius: 10px;}
@@ -22,5 +22,11 @@
     .mainimg img{width:100%;height: 500px;}
     .testimonials{flex-direction: column;align-items: center;}
     .testimonials img{border-radius: 50%;}
+}
+@media screen and (max-width:360px){
+
+    .article{width:90%;font-size: 120%;}
+    .hero2{font-size:160%;align-items: center;}
+    .hero2 h1{font-size: 150%;padding-left: 20px;}
 }
    
