--- a/templates/base.html
+++ b/templates/base.html
@@ -21,9 +21,9 @@
         </div> 
         <div class="nav">
             <ul>
-                <li id="home"><a href="">Home</a></li>
-                <li><a href="">Courses</a></li>
-                <li><a href="">Pricing</a></li>
+                <li id="home"><a href="/">Home</a></li>
+                <li><a href="/course">Courses</a></li>
+                <li><a href="/price">Pricing</a></li>
                 <li><a href="">About</a></li>
             </ul>
             <i class="fa fa-bars" aria-hidden="true" id="bars"></i>
