--- a/templates/about.html
+++ b/templates/about.html
@@ -22,17 +22,17 @@ About Target computer
         <img src="{{url_for('static',filename='images/about.png')}}">
         <div class="hulk">
             <h2>One Mission One Goal</h2>
-            <p>The Target computer Education Hub<br>
-               is a dream of Mr. Deep Dubey sir<br>
-               His effort is to reach out every<br>
-               students and provide the basic computer<br>
-               education at affordable price<br>
-               Let deep down in the world<br>
+            <p>The Target computer Education Hub
+               is a dream of Mr. Deep Dubey sir
+               His effort is to reach out every
+               students and provide the basic computer
+               education at affordable price
+               Let deep down in the world
                of The Computer with Target computer
             </p>
             <div class="call">
-                <span class="btn"><a href="">Join us</a></span>
-                <span class="btn1"><a href="">Explore</a></span>
+                <div class="btn"><a href="">Join us</a></div>
+                <div class="btn1"><a href="">Explore</a></div>
             </div>
         </div>
 
