--- a/static/about.css
+++ b/static/about.css
@@ -1,7 +1,7 @@
 .about{display:flex;margin-left: 280px;padding-top:150px;font-size: 250%;}
-.about img{width: 350px;height: auto;}
+.about img{width: 350px;height: auto;flex-shrink: 0;}
 .aboutinfo h2{color:red;}
-.call span{background:red;color:white;padding: 5px;border-radius: 5px;}
+.call div a{background:red;color:white;padding: 10px;border-radius: 5px;}
 .call{padding-top:20px;}
 .social{display:flex;flex-direction: column;position:absolute;margin-left:-280px;margin-top:40px;background:rgb(230, 220, 228);height: 220px;}
 .social .fa{font-size:100%;padding-top: 13px;padding-bottom: 5px;padding: 10px;}
@@ -13,10 +13,32 @@
 .fa-envelope-o:hover{color:red;}
 .btn a{text-decoration: none;color:white;font-size:80%;padding: 5px;}
 .btn1 a{text-decoration: none;color:white;font-size:80%;padding: 5px;}
-.btn:hover{background: rgb(185, 14, 14);}
-.btn1:hover{background: rgb(185, 14, 14);}
-.aboutinfo{display:flex;align-items: center;padding-bottom: 280px;margin: auto;}
+.btn a:hover{background: rgb(185, 14, 14);}
+.btn1 a:hover{background: rgb(185, 14, 14);}
+.aboutinfo{display:flex;align-items: center;padding-bottom:100px;margin: auto;}
 #social{position: sticky;top: 120px;}
+.call{display: flex;}
+.call div{padding: 30px;}
+.hulk{border: 1px;width:650px;flex-shrink: 3;}
+
 @media screen and (max-width:1103px){
     .about{font-size: 220%;}
 }
+@media screen and (max-width:500px){
+    .aboutinfo{flex-direction: column;}
+    .call{justify-content: center;}
+    .hulk{width:300px;font-size: 90%;}
+    .social .fa{display: none;}
+    
+}
+@media screen and (max-width:367px){
+    .aboutinfo{flex-direction: column;}
+    .about{padding-top: 50px;}
+    .call{justify-content: center;}
+    .hulk{width:220px;font-size:70%;}
+    .about img{flex-shrink:10;height:300px;width: 250px;}
+    .call{flex-direction: column;}
+    .social .fa{display: none;}
+    
+}
+
