--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 <li id="home"><a href="/">Home</a></li>
                 <li><a href="/course">Courses</a></li>
                 <li><a href="/price">Pricing</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
             <i class="fa fa-bars" aria-hidden="true" id="bars"></i>
         </div>   
@@ -32,24 +32,25 @@
 
     <div class="submenu">
       <div class="subshow">
-        <div class="social">
-            <i class="fa fa-facebook-official fa1" aria-hidden="true"></i>
-            <i class="fa fa-whatsapp fa2" aria-hidden="true"></i>
-            <i class="fa fa-twitter-square fa3" aria-hidden="true"></i>
-            <i class="fa fa-instagram fa4" aria-hidden="true"></i>
-        </div>
-        <div class="socialmenu">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Courses</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">About</a></li>
+         <div class="social">
+             <i class="fa fa-facebook-official fa1" aria-hidden="true"></i>
+             <i class="fa fa-whatsapp fa2" aria-hidden="true"></i>
+             <i class="fa fa-twitter-square fa3" aria-hidden="true"></i>
+             <i class="fa fa-instagram fa4" aria-hidden="true"></i>
+         </div>
+         <div class="socialmenu">
+             <ul>
+                 <li><a href="">Home</a></li>
+                 <li><a href="">Courses</a></li>
+                 <li><a href="">Pricing</a></li>
+                 <li><a href="">About</a></li>
                 <li><a href="">Gallery</a></li>
-            </ul>
-        </div>
-        <div class="cross">
+             </ul>
+         </div>
+         <div class="cross">
             <i class="fa-solid fa-xmark"></i>
-        </div>
+         </div>
+        </div> 
       </div>
     </div>
      {% block content %}
@@ -92,6 +93,18 @@
                 <i class="fa fa-instagram" aria-hidden="true"></i>
             </div>
         </div>
-    </div>    
+    </div> 
+    <script>
+        document.querySelector(".fa-bars").addEventListener('click',showmenu);
+        function showmenu(){
+            var z=document.querySelector(".subshow");
+            if(z.style.display=='none'){
+                z.style.display='block';
+            }else{
+                z.style.display='none';
+            }
+
+        }
+    </script>   
 </body>
 </html>
