--- a/templates/base.html
+++ b/templates/base.html
@@ -40,10 +40,10 @@
          </div>
          <div class="socialmenu">
              <ul>
-                 <li><a href="">Home</a></li>
-                 <li><a href="">Courses</a></li>
-                 <li><a href="">Pricing</a></li>
-                 <li><a href="">About</a></li>
+                 <li><a href="/">Home</a></li>
+                 <li><a href="/course">Courses</a></li>
+                 <li><a href="/price">Pricing</a></li>
+                 <li><a href="/about">About</a></li>
                 <li><a href="">Gallery</a></li>
              </ul>
          </div>
