--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,111 +1,237 @@
 {% extends "base.html" %}
 {% block title %}
-Courses Target computer
+Corses Target computer
 {% endblock %}
 {% block head %}
 <link rel="stylesheet" href="{{url_for('static',filename='course.css')}}">
 {% endblock %}
 {% block content %}
 
-<div class="course">
-    <h1>Courses</h1>
-    <div class="col1 col">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-    </div>
-    <div class="aboutcourse">
-        <p><b>DCA</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
+<div class="coursecall">
+    <p><a href="#dca">DCA</a></p>
+    <p><a href="#adca">ADCA</a></p>
+    <p><a href="#tally">Tally</a></p>
+    <p><a href="#tally">TALLY</a></p>
+    <p><a href="#c++">C++</a></p>
+    <p><a href="#python">Python</a></p>
+    <p><a href="">JAVA</a></p>
+    <p><a href="#java">Javascript</a></p>
+    <p><a href="">CSS</a></p>
+    <p><a href="">Flask</a></p>
+    <p><a href="">C++</a></p>
+    <p><a href="">Python</a></p>
+    <p><a href="">JAVA</a></p>
+    <p><a href="">Javascript</a></p>
+    <p><a href="">CSS</a></p>
+    <p><a href="">Flask</a></p>
+    <p><a href="">Flask</a></p>
+    <p><a href="">JAVA</a></p>
+    <p><a href="">Javascript</a></p>
+    <p><a href="">CSS</a></p>
+    <p><a href="">Flask</a></p>
+    <p><a href="">Flask</a></p>
+
+</div>
+<div class="dca">
+    <div class="course1" id="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1 id="dca">DCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
         </p>
-        <p><b>ADCA</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
-        </p>
-    </div>
-    <div class="col2 col">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-    </div>
-    <div class="aboutcourse">
-        <p><b>Tally</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
-        </p>
-        <p><b>C++</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
-        </p>
-    </div>
-    <div class="col3 col">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-    </div>
-    <div class="aboutcourse">
-        <p><b>PYTHON</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
-        </p>
-        <p><b>Ms-Excel</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
-        </p>
-    </div>
-    
-    <div class="col5 col">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}">
-    </div>
-    <div class="aboutcourse">
-        <p><b>JAVASCRIPT</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
-        </p>
-        <p><b>FLASK</b><br>
-            Get this full course  <br>
-            at affordable price.<br>
-            This course is combo pack<br>
-            contains many courses like<br>
-            Notepad,Wordpad,Ms-access,<br>
-            powerpoint,Ms-excel,<br>
-            Touch typing and many more
-        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
     </div>
 </div>
-<br><br><br><br><br>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1 id="adca">ADCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1 id="tally">TALLY</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1 id="c++">C++</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1 id="python">PYTHON</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1 id="java">JAVASCRIPT</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1>DCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1>DCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1>DCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1>DCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
+        <div class="coursecontent">
+            <h1>DCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+
+
+
 {% endblock %}
+
