--- a/static/home.css
+++ b/static/home.css
@@ -5,7 +5,7 @@
 .btns{display: flex;margin-left: -25px;}
 .btns div{padding: 20px;}
 .btns div a{background: red;text-decoration: none;color:white;padding: 10px;border-radius: 5px;}
-.hero2{display: flex;flex-direction: column;align-items: center;font-size: 150%;padding-top: 150px;}
+.hero2{display: flex;flex-direction: column;align-items: center;font-size: 190%;padding-top: 150px;text-align: center;}
 
 .hero2btn{display: flex;flex-direction: row;}
 .hero2btn div{padding:20px;}
