--- a/static/course.css
+++ b/static/course.css
@@ -1,6 +1,6 @@
-.coursecall{display: flex;font-size: 180%;overflow: scroll;background: rgb(0, 174, 255);align-items: center;padding: 10px;}
+.coursecall{display: flex;font-size: 180%;overflow: scroll;background: rgb(255, 255, 255);align-items: center;padding: 10px;border: 1px;outline-style: solid;color:rgb(128, 121, 121);outline-width: 0.8px;}
 .coursecall p{padding-left: 30px;}
-.coursecall p a{text-decoration: none;color:rgb(0, 0, 0);font-weight: bold;}
+.coursecall p a{text-decoration: none;color:rgb(80, 74, 74);font-weight: bold;}
 .coursecall p a:hover{text-decoration: underline;color:rgb(255, 255, 255);}
 .course1 img{height: 300px;width:auto;}
 .course1{display: flex;border: 1px;width:900px;margin:0 auto;outline-style: solid;background:rgb(129, 121, 121);padding: 10px;outline-width: 0.8px;}
