--- a/templates/courses.html
+++ b/templates/courses.html
@@ -7,7 +7,7 @@ Corses Target computer
 {% endblock %}
 {% block content %}
 
-<div class="coursecall">
+<div class="coursecall" id="coursecall">
     <p><a href="#dca">DCA</a></p>
     <p><a href="#adca">ADCA</a></p>
     <p><a href="#tally">Tally</a></p>
