--- a/static/course.css
+++ b/static/course.css
@@ -1,4 +1,4 @@
-.coursecall{display: flex;font-size: 140%;overflow: scroll;background: rgb(255, 255, 255);align-items: center;padding: 10px;border: 1px;outline-style: solid;color:rgb(128, 121, 121);outline-width: 0.8px;}
+.coursecall{display: flex;font-size: 140%;overflow: scroll;background: rgb(255, 255, 255);align-items: center;padding: 20px;border: 1px;outline-style: solid;color:rgb(128, 121, 121);outline-width: 0.8px;position:relative;margin-top: -698px;}
 .coursecall p{padding-left: 30px;}
 .coursecall p a{text-decoration: none;color:rgb(80, 74, 74);}
 .coursecall p a:hover{text-decoration: underline;color:rgb(24, 21, 21);}
@@ -13,7 +13,7 @@
 .course1:hover{background: rgb(243, 131, 149);}
 .coursebtn p a:hover{background:rgb(255, 0, 0);color:rgb(253, 251, 251);}
 .random .course1{background: red;}
-#coursecall{position: sticky;top:0px;}
+#coursecall{position: sticky;top:118px;}
 html{
     scroll-behavior: smooth;
 }
