--- a/static/home.css
+++ b/static/home.css
@@ -1,4 +1,4 @@
-.hero1{display: flex;justify-content: space-around;padding-top: 35px;align-items: center;}
+.hero1{display: flex;justify-content: space-around;padding-top:10px;align-items: center;}
 .mainimg img{width:100%;height: 400px;}
 .article{font-size: 150%;display: flex;flex-direction: column;align-items: baseline;width:45%;}
 .article p{font-size: 150%;}
@@ -29,4 +29,5 @@
     .hero2{font-size:160%;align-items: center;}
     .hero2 h1{font-size: 150%;padding-left: 20px;}
 }
-   
+
+.home{position: relative;margin-top: -680px;}
