--- a/static/base.css
+++ b/static/base.css
@@ -1,5 +1,5 @@
 *{margin: 0px;padding:0px;}
-body{margin:0px;padding:0px;}
+body{margin:0px;padding:0px;display: flex;flex-direction: column;position: relative;position:relative;}
 header{display: flex;justify-content:space-between;background: rgb(88, 84, 84);border: 1px;align-items: center;z-index: 9999;}
 #header{position: sticky;top:0px;}
 .logo img{width: 150px;height: 100px;padding:10px;}
@@ -7,12 +7,12 @@ header{display: flex;justify-content:space-between;background: rgb(88, 84, 84);b
 .nav ul{display: flex;list-style: none;}
 .nav ul li{padding: 40px;}
 .nav ul li a{font-size: 25px;color:white;text-decoration: none;}
-.fa-bars{color:white;font-size: 50px;padding-right: 10px;background: rgb(83, 77, 77);}
+.fa-bars{color:white;font-size: 50px;padding-right: 10px;background: rgb(83, 77, 77);visibility: hidden;}
 #home a{background: rgb(0, 183, 255);padding:10px 10px 10px;border-radius: 10px;}
 @media screen and (max-width:805px){
     .nav ul{display:none;}
 }
-.footer{display:flex;justify-content:space-around;background: black;font-size: 200%;justify-content: baseline;position: absolute;width:100%;}
+.footer{display:flex;justify-content:space-around;background: black;font-size: 200%;justify-content: baseline;width:100%;}
 .footer a{text-decoration: none;color:white;}
 .footer p{text-decoration: none;color:white;}
 .footer .fa{text-decoration: none;color:white;color:white;}
@@ -20,6 +20,7 @@ header{display: flex;justify-content:space-between;background: rgb(88, 84, 84);b
 .devdonate{width:100%}
 .footer h4{color:white;}
 .col4{display: flex;flex-direction: column;align-items: center;}
+.cross{position: absolute;margin-top: -400px;margin-left: 530px;font-size: 150%;background: red;cursor: pointer;color:white;}
 
 @media screen and (max-width:726px){
     .footer{flex-direction: column;align-items: center;}
@@ -28,16 +29,20 @@ header{display: flex;justify-content:space-between;background: rgb(88, 84, 84);b
     .footer p a{text-align: center;}
     
 }
-.submenu{display: flex;justify-content: right;z-index:999;}
-.hide .subshow{opacity: 100%;}
-
-.subshow{background:red;width: 400px;;height:700px;font-size: 200%;z-index: 999;opacity:0%;flex-shrink: 1;}
-.socialmenu{position: absolute;margin-left: 200px;margin-top: -350px;}
-.social{margin-top: 100px;padding-left: 10px;}
+@media screen and (max-width:520px){
+    .fa-bars{visibility: visible;}
+    
+}
+.submenu{align-self: flex-end;z-index: 9999;}
+.subshow{background:red;width:600px;;height:1200px;font-size: 200%;z-index: 999;flex-shrink: 1;align-self: flex-end;display: none;margin-top: -150px;}
+.socialmenu{position: absolute;margin-left: 400px;margin-top: -400px;}
+.social{margin-top: 260px;margin-left:300px;}
 .social .fa{padding-top: 40px;}
-.socialmenu ul{list-style: none;}
+.socialmenu ul{list-style: none;padding-top: 50px;}
 .socialmenu ul li{padding-top: 40px;}
 .socialmenu ul li a{color:white;text-decoration: none;}
-#submenu{position: sticky;top: 115px;}
+#submenu{position:fixed;}
+
+.hide .subshow{display: inline-block;}
 
 
