--- a/static/course.css
+++ b/static/course.css
@@ -1,10 +1,11 @@
-.coursecall{display: flex;font-size: 140%;overflow: scroll;background: rgb(255, 255, 255);align-items: center;padding: 20px;border: 1px;outline-style: solid;color:rgb(128, 121, 121);outline-width: 0.8px;position:relative;margin-top: -698px;}
+.coursecall{display: flex;font-size: 140%;overflow: scroll;background: rgb(255, 255, 255);align-items: center;padding: 20px;border: 1px;outline-style: solid;color:rgb(128, 121, 121);outline-width: 0.8px;position: relative;margin-top: -720px;position:sticky;top:118px;}
 .coursecall p{padding-left: 30px;}
 .coursecall p a{text-decoration: none;color:rgb(80, 74, 74);}
 .coursecall p a:hover{text-decoration: underline;color:rgb(24, 21, 21);}
 .course1 img{height: 300px;width:auto;}
-.course1{display: flex;border: 1px;width:900px;margin:0 auto;outline-style: solid;background:rgb(129, 121, 121);padding: 10px;outline-width: 0.8px;}
-.dca{display: flex;justify-content: center;padding-bottom:120px;padding-top: 50px;}
+.course1{display: flex;border: 1px;width:900px;margin:0 auto;outline-style: solid;background:rgb(129, 121, 121);padding:10px;outline-width: 0.8px;}
+#course1{margin-top: 700px;}
+.dca{display: flex;justify-content: center;padding-bottom:100px;padding-top: 50px;}
 .coursecontent{display: flex;align-items: center;flex-direction: column;}
 .coursecontent p{font-size: 150%;text-align: center;}
 .coursecontent h1{color:rgb(0, 0, 0);}
@@ -13,7 +14,7 @@
 .course1:hover{background: rgb(243, 131, 149);}
 .coursebtn p a:hover{background:rgb(255, 0, 0);color:rgb(253, 251, 251);}
 .random .course1{background: red;}
-#coursecall{position: sticky;top:118px;}
+
 html{
     scroll-behavior: smooth;
 }
