--- a/templates/courses.html
+++ b/templates/courses.html
@@ -8,36 +8,42 @@ Corses Target computer
 {% block content %}
 
 <div class="coursecall" id="coursecall">
-    <p><a href="#dca">DCA</a></p>
+    <p><a href="#dcaimg">DCA</a></p>
     <p><a href="#adca">ADCA</a></p>
-    <p><a href="#tally">Tally</a></p>
     <p><a href="#tally">TALLY</a></p>
+    <p><a href="#dtp">DTP</a></p>
     <p><a href="#c++">C++</a></p>
-    <p><a href="#python">Python</a></p>
-    <p><a href="">JAVA</a></p>
-    <p><a href="#java">Javascript</a></p>
-    <p><a href="">CSS</a></p>
-    <p><a href="">Flask</a></p>
-    <p><a href="">C++</a></p>
-    <p><a href="">Python</a></p>
-    <p><a href="">JAVA</a></p>
-    <p><a href="">Javascript</a></p>
-    <p><a href="">CSS</a></p>
-    <p><a href="">Flask</a></p>
-    <p><a href="">Flask</a></p>
-    <p><a href="">JAVA</a></p>
-    <p><a href="">Javascript</a></p>
-    <p><a href="">CSS</a></p>
-    <p><a href="">Flask</a></p>
-    <p><a href="">Flask</a></p>
+    <p><a href="#java">JAVA</a></p>
+    <p><a href="#bluej">BLUe-J</a></p>
+    <p><a href="#typing">TYPING</a></p>
+    <p><a href="#msoffice">Ms-Office</a></p>
+
 
 </div>
 
 <div class="dca">
     <div class="course1" id="course1">
+        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="" id="dcaimg">
+        <div class="coursecontent">
+            <h1 id="dca">DCA</h1>
+        <p>This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+            This course is Design for Beginners with
+            Great examples and explanition this course will
+            cover all the basics applicatins
+        </p>
+        <div class="coursebtn">
+            <p><a href="">GET NOW</a></p>
+        </div>
+        </div>
+    </div>
+</div>
+<div class="dca">
+    <div class="course1">
         <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
         <div class="coursecontent">
-            <h1 id="adca">ADCA</h1>
+            <h1 id="#adca">ADCA</h1>
         <p>This course is Design for Beginners with
             Great examples and explanition this course will
             cover all the basics applicatins
@@ -73,7 +79,7 @@ Corses Target computer
     <div class="course1">
         <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
         <div class="coursecontent">
-            <h1 id="c++">C++</h1>
+            <h1 id="dtp">DTP</h1>
         <p>This course is Design for Beginners with
             Great examples and explanition this course will
             cover all the basics applicatins
@@ -91,7 +97,7 @@ Corses Target computer
     <div class="course1">
         <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
         <div class="coursecontent">
-            <h1 id="python">PYTHON</h1>
+            <h1 id="c++"> C++</h1>
         <p>This course is Design for Beginners with
             Great examples and explanition this course will
             cover all the basics applicatins
@@ -109,7 +115,7 @@ Corses Target computer
     <div class="course1">
         <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
         <div class="coursecontent">
-            <h1 id="java">JAVASCRIPT</h1>
+            <h1 id="java">JAVA</h1>
         <p>This course is Design for Beginners with
             Great examples and explanition this course will
             cover all the basics applicatins
@@ -127,7 +133,7 @@ Corses Target computer
     <div class="course1">
         <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
         <div class="coursecontent">
-            <h1>DCA</h1>
+            <h1 id="bluej">BLUE-J</h1>
         <p>This course is Design for Beginners with
             Great examples and explanition this course will
             cover all the basics applicatins
@@ -145,7 +151,7 @@ Corses Target computer
     <div class="course1">
         <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
         <div class="coursecontent">
-            <h1>DCA</h1>
+            <h1 id="typing">TYPING</h1>
         <p>This course is Design for Beginners with
             Great examples and explanition this course will
             cover all the basics applicatins
@@ -163,43 +169,7 @@ Corses Target computer
     <div class="course1">
         <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
         <div class="coursecontent">
-            <h1>DCA</h1>
-        <p>This course is Design for Beginners with
-            Great examples and explanition this course will
-            cover all the basics applicatins
-            This course is Design for Beginners with
-            Great examples and explanition this course will
-            cover all the basics applicatins
-        </p>
-        <div class="coursebtn">
-            <p><a href="">GET NOW</a></p>
-        </div>
-        </div>
-    </div>
-</div>
-<div class="dca">
-    <div class="course1">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
-        <div class="coursecontent">
-            <h1>DCA</h1>
-        <p>This course is Design for Beginners with
-            Great examples and explanition this course will
-            cover all the basics applicatins
-            This course is Design for Beginners with
-            Great examples and explanition this course will
-            cover all the basics applicatins
-        </p>
-        <div class="coursebtn">
-            <p><a href="">GET NOW</a></p>
-        </div>
-        </div>
-    </div>
-</div>
-<div class="dca">
-    <div class="course1">
-        <img src="{{url_for('static',filename='images/lapton.jpg')}}" alt="">
-        <div class="coursecontent">
-            <h1>DCA</h1>
+            <h1 id="msoffice">MS-Office</h1>
         <p>This course is Design for Beginners with
             Great examples and explanition this course will
             cover all the basics applicatins
