--- a/templates/home.html
+++ b/templates/home.html
@@ -22,8 +22,8 @@ Home Target computer
              Don't miss the Chance
            </p>
            <div class="btns">
-             <div class="btn1"><a href="">Explore</a> </div>
-             <div class="btn2"><a href="">SignUp</a> </div>
+             <div class="btn1"><a href="/course">Explore</a> </div>
+             <div class="btn2"><a href="/signupform">SignUp</a> </div>
            </div>
            
         </div>
@@ -43,8 +43,8 @@ Home Target computer
           course  
         </p>
         <div class="hero2btn">
-            <div class="btn11"><a href="">Enroll Now</a></div>
-            <div class="btn12"><a href="">Start</a></div>
+            <div class="btn11"><a href="/course">Enroll Now</a></div>
+            <div class="btn12"><a href="/signupform">Start</a></div>
         </div>
     </div>
     <div class="hero3">
