--- a/static/signup.css
+++ b/static/signup.css
@@ -1,5 +1,5 @@
-.formcontainer{display: flex;flex-direction: column;align-items: center;padding-top: 60px;padding-bottom: 50px;}
-form{text-align: center;font-size: 150%;background: red;padding:60px 80px;z-index: 99;box-shadow: 5px 5px 10px;}
+.formcontainer{display: flex;flex-direction: column;align-items: center;padding-top: 60px;padding-bottom: 50px;width:100vw;height:78vh;}
+form{text-align: center;font-size: 150%;background: red;padding:60px 80px;z-index: 99;box-shadow: 5px 5px 10px;animation-name: move;animation-timing-function:ease-in;animation-duration: 1s;animation-iteration-count: 1;}
 .input{height:25px;}
 .formbtn{padding:10px 20px;margin-top: 20px;}
 .input:focus{border: 5px solid blue;}
@@ -12,4 +12,10 @@ body{background: rgb(0, 255, 98);backdrop-filter: contrast(50%);animation-name: 
     75%{background: rgb(202, 0, 253);}
     100%{background: rgb(255, 0, 98);}
     
+}
+@keyframes move {
+    from{transform: translateY(-480px);}
+    to{transform: translateY(10px);}
+
+
 }
