--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
                     <li><a href="/course">Courses</a></li>
                     <li><a href="/price">Pricing</a></li>
                     <li><a href="/about">About</a></li>
+                    <li><a href="/mail">Email</a></li>
                    <li><a href="">Gallery</a></li>
                 </ul>
             </div>
@@ -109,6 +110,7 @@
            
            
         }
+
        
        
     </script>
