--- a/templates/base.html
+++ b/templates/base.html
@@ -93,7 +93,7 @@
                 to motivate more <br>
                 
             </p><br>
-            <div class="devdonate"><a href="">Donate Now</a></div><br>
+            <div class="devdonate"><a href="https://www.instamojo.com/@SachinTarget/">Donate Now</a></div><br>
             <div class="devsocial">
                 <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
